# EnchantedNatures.WebApp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Trunk.toml  angular.json  index.html  nginx.conf  package-lock.json  proxy.conf.json
.github/workflows/: build-and-deploy.yaml  cloudflare-deploy.yaml  docker-image.yml  webassembly.yaml
public/: scripts.js  styles.css
public/js/: scripts.js
src/: api.rs  components.rs  directives.rs  index.html  lib.rs  main.rs  styles.css
src/app/: app-routing.module.ts  app.component.html  app.module.ts  category-photos.ts  category.ts  horizontal-scroll.directive.ts  nav.service.ts  photo.service.spec.ts  photo.service.ts  photo.ts
src/app/gallery/: gallery.component.html  gallery.component.ts
src/app/nav-menu/: nav-menu.component.html  nav-menu.component.ts
src/app/studio/: studio.component.html  studio.component.ts
src/components/: gallery.rs  studio.rs
