[package]
name = "enchanted-natures-web-app"
version = "0.1.0"
edition = "2021"

[lints.rust]
non_snake_case = "allow"
unsafe_code = "forbid"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos-use = { version = "0.10", features = ["serde", "serde_json" ] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"

reqwest = { version = "0.12", features = ["json"] }

wasm-bindgen = { version = "0.2" }
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}
uuid = { version = "1.6.1", features = ["serde", "v4"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
gloo-net = "0.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
serde_json = "1"
chrono-tz = { version = "0.9", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
