[package]
name = "enchanted-natures-web-app"
version = "0.1.0"
edition = "2021"

[lints.rust]
non_snake_case = "allow"
unsafe_code = "forbid"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos-use = { version = "0.18" }
leptos_router = { version = "0.8", features = ["nightly"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

reqwest = { version = "0.13", features = ["json"] }

wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3" }
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}
uuid = { version = "1", features = ["serde", "v4", "js"] }
leptos_meta = { version = "0.8" }
gloo-net = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
serde_json = "1.0"
chrono-tz = { version = "0.10", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
